--- a/style.css
+++ b/style.css
@@ -22,9 +22,6 @@ body{
 /* cursor */
 
 
-
-
-
 ::-webkit-scrollbar{
     display: none;
 }
@@ -55,13 +52,16 @@ body{
     transition: width .3s, height .3s, opacity .3s;
 }
   
-
+/* start */
 
 .container{
     background: var(--secondarycolor);
     font-family: 'Kanit', sans-serif;
     color: white;
 }
+
+
+/* navbar */
 
 
 .navbar{
@@ -74,7 +74,7 @@ body{
     width: 90px;
     height: 240px;
     writing-mode:vertical-rl;
-    background: var(--secondarycolor);
+    background: transparent;
     border-right: 0.1px solid gray;
     font-size: 18px;
     font-weight: 200;
@@ -83,6 +83,7 @@ body{
     align-items:center;
     justify-content:space-around;
 }
+
 
 .main-content{
     overflow-x: hidden;
@@ -171,6 +172,7 @@ body{
     padding-left: 150px;
     position: relative;
     background: var(--bgColor);
+    padding-bottom: 100px;
 }
 
 .page-2-content h1{
@@ -193,6 +195,7 @@ body{
 }
 
 .page-2-content button{
+    font-weight: 500;
     color: gray;
     font-size: 16px;
     background: transparent;
@@ -207,10 +210,347 @@ body{
     border: 1px solid gray;
 }
 
-.page-2-content button:hover{
+.page-2-content button:hover,
+.page-3content button:hover,
+.workwithus button:hover{
     border: 1px solid var(--thirdcolor);
     transition:  0.5s;
     background: var(--thirdcolor);
     color: var(--secondarycolor);
 }
 
+/* page-3 */
+
+.page-3{
+    background: #171717;
+}
+
+.page-3content{
+    padding: 150px;
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    gap: 90px;
+}
+
+.page-3content h3,
+.page-4content h3,
+.page-5content h3,
+.page-5 div h3,
+.page-5content div h3,
+.blog h3{
+    font-size: 18px;
+    font-weight: 400;
+}
+
+.page-3content h2,
+.page-4content h2,
+.page-5content h2,
+.page-5 div h2,
+.blog h2{
+    font-size: 60px;
+    line-height: 60px;
+    letter-spacing: 3px;
+}
+
+.page-3content div p,
+.page-5content p,
+.workflow h6,
+.page-5content h6{
+    font-size: 20px;
+    font-weight: 300;
+    color: gray;
+}
+
+.page-3content div p span{
+    color: rgb(255, 255, 255);
+}
+
+
+
+.page-3content div button{
+    color: gray;
+    font-size: 16px;
+    font-weight: 500;
+    background: transparent;
+    border-radius: 50%;
+    padding: 50px;
+    width: 200px;
+    text-align: center;
+    height: 200px;
+    border: 1px solid gray;
+}
+
+
+/* faqq */
+
+.faq{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding-bottom: 100px;
+}
+
+.writing-section{
+    display: grid;
+    grid-template-columns: 100px 400px 400px ;
+    align-items: center;
+    justify-content: center;
+}
+
+.writing-section div{
+    width: 400px;
+    padding-left: 80px;
+}
+
+.writing-section div h2,
+.writing-section div h1 {
+    font-size: 28px;
+    line-height: 50px;
+    font-weight: 300;
+}
+
+.writing-section div p{
+    font-size: 16px;
+    color: gray;
+    font-weight: 300;
+}
+
+
+
+/* page-4 */
+
+
+.page-4{
+    background: #121212;
+    padding-top: 200px;
+}
+
+.countdown{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 0px;
+}
+
+.countdown div{
+    border-radius: 50%;
+    border: 0.1px solid gray;
+    height: 300px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    width: 300px;
+}
+
+.countdown div h1{
+    font-weight: 300;
+    font-size: 100px;
+}
+
+.countdown div h6{
+    font-weight: 300;
+    color: gray;
+    text-align: center;
+    font-size: 20px;
+}
+
+
+/* workflow */
+
+
+.page-4content{
+    padding-top: 300px;
+    text-align: center;
+}
+
+
+/* steps */
+
+.workflow{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-top: 100px;
+}
+
+.workflow div{
+    text-align: center;
+    width: 280px;
+    padding-bottom: 120px;
+}
+
+.workflow div h3{
+    font-size: 18px;
+    font-weight: 400;
+    padding-bottom: 30px;
+}
+
+.workflow div h1{
+    font-size: 100px;
+    font-weight: 500;
+    color: rgba(128, 128, 128, 0.18);
+    animation: bounce alternate-reverse 2s infinite;
+}
+
+
+.workflow div span{
+    border-radius: 50%;
+    color: transparent;
+    background: var(--thirdcolor);
+}
+
+@keyframes bounce {
+    50%{
+        transform: scale(1);
+    }
+    100%{
+        transform: scale(1.05);
+    }
+    
+}
+
+
+
+.workflow div h5{
+    font-size: 25px;
+    font-weight: 500;
+}
+
+.workflow div h6{
+    font-size: 16px;
+    font-weight: 400;
+    padding-top: 20px;
+}
+
+
+
+/* page-5 */
+
+
+.page-5{
+    background: #171717;
+    padding-top: 150px;
+    padding-left: 150px;    
+}
+
+
+/* logos */
+
+
+.clients{
+    margin-top: 90px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    /* border: 1px solid rgba(128, 128, 128, 0.491); */
+}
+
+.clients img{
+    padding: 60px;
+}
+
+
+
+/* testimonials */
+
+
+.page-5content{
+    padding-top: 150px;
+    padding-left: 70px;
+    display: flex;
+    flex-wrap: wrap;
+    gap: 100px;
+}
+
+
+/* blogg */
+
+.blog{
+    padding-top: 150px;
+    text-align: center;
+}
+
+
+.blogg{
+    padding-top: 50px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 30px;
+}
+
+
+.blogg div h6{
+    color: gray;
+    font-size: 18px;
+    padding-top: 10px;
+    font-weight: 300;
+}
+
+
+.blogg div p{
+    font-size: 26px;
+    padding-top: 10px;
+    font-weight: 400;
+}
+
+.blogg div hr{
+    margin-top: 20px;
+}
+
+
+
+/* .workflow */
+
+
+.workwithus{
+    padding-top: 180px;
+    text-align: center;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+}
+
+
+.workwithus p{
+    border-radius: 20px;
+    border: 1px solid white;
+    padding:2px 10px;
+    font-size: 18x;
+    margin-bottom: 20px;
+}
+
+
+.workwithus button{
+    margin-top: 80px;
+    margin-bottom: 100px;
+    font-weight: 500;
+    color: gray;
+    font-size: 16px;
+    background: transparent;
+    border-radius: 50%;
+    width: 200px;
+    text-align: center;
+    height: 200px;
+    border: 1px solid gray;
+}
+
+
+/* footer */
+
+
+.footer-img{
+    
+    position: relative;
+    float: right;
+}
+
+.footer{
+    position: absolute;
+    background: #121212;
+    margin-top: 170px;
+    width: 900px;
+}
