--- a/style.css
+++ b/style.css
@@ -87,10 +87,17 @@ body{
 
 .main-content{
     overflow-x: hidden;
+    position: relative;
 }
 
 
+
+
+
+
 /* page-1 */
+
+
 
 
 .page-1{
@@ -102,7 +109,6 @@ body{
     height: 100vh;
     width: 100vw;
 }
-
 
 .page-1 div{
     height: 100vh;
@@ -125,6 +131,19 @@ body{
     padding-top: 40px;
     padding-bottom: 20px;
     font-size: 120px;
+    animation: text 1 1s forwards;
+    opacity: 0;
+}
+
+@keyframes text {
+    0%{
+        transform: translateY(-120px);
+    }
+
+    100%{
+        transform: translateY(0px);
+        opacity: 1;
+    }
 }
 
 
@@ -137,7 +156,7 @@ body{
 }
 
 
-.page-1 h1 p{
+.page-1  p{
     width: 420px;
     font-size: 18px;
     font-weight: 400;
@@ -169,6 +188,7 @@ body{
 }
 
 .page-2-content{
+    position: relative;
     padding-left: 150px;
     position: relative;
     background: var(--bgColor);
@@ -181,10 +201,22 @@ body{
     padding: 100px;
 }
 
+
 .page-2-content-img{
     float: right;
     padding-right: 100px;
 }
+
+.page-2-content-img2{
+    background: url('img2.jpg');
+    background-repeat: no-repeat;
+    height: 564px;
+    color: transparent;
+    background-attachment: fixed;
+    width: 440px;
+}
+
+
 
 .page-2-content p{
     padding-right: 90px;
@@ -212,7 +244,8 @@ body{
 
 .page-2-content button:hover,
 .page-3content button:hover,
-.workwithus button:hover{
+.workwithus button:hover,
+.last-footer button:hover{
     border: 1px solid var(--thirdcolor);
     transition:  0.5s;
     background: var(--thirdcolor);
@@ -284,11 +317,36 @@ body{
 
 /* faqq */
 
+
+.hoveranimation{
+    animation: hoveranime forwards 1s;
+}
+
+@keyframes hoveranime {
+   
+    10%{
+        transform: translate(-590px);
+        opacity: 0;
+    }
+}
+
 .faq{
     display: flex;
     align-items: center;
     justify-content: center;
     padding-bottom: 100px;
+}
+
+.box{
+    height: 50px;
+    width: 200px;
+    background: var(--thirdcolor);
+    transform: rotate(-30deg);
+}
+
+#img-change{
+    transform: rotate(15deg);
+    
 }
 
 .writing-section{
@@ -326,14 +384,14 @@ body{
     padding-top: 200px;
 }
 
-.countdown{
+.love_counter{
     display: flex;
     align-items: center;
     justify-content: center;
     gap: 0px;
 }
 
-.countdown div{
+.love_counter div{
     border-radius: 50%;
     border: 0.1px solid gray;
     height: 300px;
@@ -344,12 +402,12 @@ body{
     width: 300px;
 }
 
-.countdown div h1{
+.love_counter div h1{
     font-weight: 300;
     font-size: 100px;
 }
 
-.countdown div h6{
+.love_counter div h6{
     font-weight: 300;
     color: gray;
     text-align: center;
@@ -543,14 +601,86 @@ body{
 
 
 .footer-img{
-    
-    position: relative;
-    float: right;
+    background: url('footer.jpg');
+    background-repeat: no-repeat;
+    background-size: cover;
+    width: 1400px;
+    height: 660px;
+    background-attachment: fixed;
+    position: absolute;
 }
 
 .footer{
     position: absolute;
+    background: #171717;
+    margin-top: 120px;
+    width: 1300px;
+    height: 545px;
+    display: grid;
+    grid-template-columns: 250px 250px 250px 200px;
+    gap: 30px;
+    padding-left: 100px;
+    align-items: center;
+    justify-content: center;
+}
+
+
+.footer p{
+    color: gray;
+    font-size: 16px;
+    padding-top: 20px;
+    font-weight: 400;
+}
+
+.footer h3{
+    font-size: 22px;
+    font-weight: 400;
+}
+
+.social-icon i{
+    padding-top: 20px;
+    padding-left: 10px;
+}
+
+.footer h6{
+    font-size: 16px;
+    padding-top: 10px;
+    font-weight: 300;
+}
+
+
+
+.cn{
+    font-weight: 500;
+    color: gray;
+    font-size: 16px;
+    background: transparent;
+    border-radius: 50%;
+    width: 200px;
+    text-align: center;
+    height: 200px;
+    border: 1px solid gray;
+}
+
+
+.last-footer{
     background: #121212;
-    margin-top: 170px;
-    width: 900px;
+    width: 325px;
+    height: 545px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    gap: 15px;
+}
+
+
+
+
+input{
+    background: #171717;
+    color: white;
+    border: none;
+    padding: 10px 20px;
+    margin-top: 20px;
 }
