--- a/style.css
+++ b/style.css
@@ -1,28 +1,29 @@
-
 @import url('https://fonts.googleapis.com/css2?family=Kanit:wght@200;300;500&display=swap');
 
 
-*{
+* {
     margin: 0;
     padding: 0;
 }
 
-:root{
+:root {
     --bgColor: #121212;
-    --textcolor:white;
-    --secondarycolor:black;
-    --thirdcolor:#C9F31D;
+    --textcolor: white;
+    --secondarycolor: black;
+    --thirdcolor: #C9F31D;
 }
 
-body{
+body {
     height: 100vh;
     cursor: none;
 }
 
+
+
 /* cursor */
 
 
-::-webkit-scrollbar{
+::-webkit-scrollbar {
     display: none;
 }
 
@@ -39,7 +40,7 @@ body{
     top: 0;
     transform: translate(calc(-50% + 15px), -50%);
 }
-  
+
 .cursor2 {
     z-index: 88;
     width: 10px;
@@ -51,10 +52,10 @@ body{
     pointer-events: none;
     transition: width .3s, height .3s, opacity .3s;
 }
-  
+
 /* start */
 
-.container{
+.container {
     background: var(--secondarycolor);
     font-family: 'Kanit', sans-serif;
     color: white;
@@ -64,28 +65,28 @@ body{
 /* navbar */
 
 
-.navbar{
+.navbar {
     position: fixed;
     z-index: 33;
 }
 
 
-.navbar ul li{
+.navbar ul li {
     width: 90px;
     height: 240px;
-    writing-mode:vertical-rl;
+    writing-mode: vertical-rl;
     background: transparent;
     border-right: 0.1px solid gray;
     font-size: 18px;
     font-weight: 200;
     display: flex;
     flex-direction: column;
-    align-items:center;
-    justify-content:space-around;
+    align-items: center;
+    justify-content: space-around;
 }
 
 
-.main-content{
+.main-content {
     overflow-x: hidden;
     position: relative;
 }
@@ -100,7 +101,7 @@ body{
 
 
 
-.page-1{
+.page-1 {
     margin-left: 150px;
     background-image: url('bg-main.png');
     background-repeat: no-repeat;
@@ -110,14 +111,14 @@ body{
     width: 100vw;
 }
 
-.page-1 div{
+.page-1 div {
     height: 100vh;
     width: 100vw;
     background: #000000c4;
 }
 
 
-.page-1 div h2{
+.page-1 div h2 {
     padding-top: 40px;
     padding-bottom: 20px;
     font-size: 22px;
@@ -127,7 +128,7 @@ body{
 }
 
 
-.page-1 div h1{
+.page-1 div h1 {
     padding-top: 40px;
     padding-bottom: 20px;
     font-size: 120px;
@@ -136,27 +137,27 @@ body{
 }
 
 @keyframes text {
-    0%{
+    0% {
         transform: translateY(-120px);
     }
 
-    100%{
+    100% {
         transform: translateY(0px);
         opacity: 1;
     }
 }
 
 
-.page-1 h1 span{
+.page-1 h1 span {
     border: 2px var(--textcolor) solid;
     border-radius: 20px;
     font-size: 30px;
-    font-weight:400;
+    font-weight: 400;
     padding: 0px 15px;
 }
 
 
-.page-1  p{
+.page-1 p {
     width: 420px;
     font-size: 18px;
     font-weight: 400;
@@ -166,7 +167,7 @@ body{
 /* page-2 */
 
 
-.yellow-band{
+.yellow-band {
     /* color: var(--secondarycolor); */
     background: var(--thirdcolor);
     width: 100vw;
@@ -181,13 +182,13 @@ body{
 }
 
 
-.yellow-band ol li{
+.yellow-band ol li {
     padding: 30px;
     list-style: none;
     color: var(--secondarycolor);
 }
 
-.page-2-content{
+.page-2-content {
     position: relative;
     padding-left: 150px;
     position: relative;
@@ -195,19 +196,20 @@ body{
     padding-bottom: 100px;
 }
 
-.page-2-content h1{
+.page-2-content h1 {
     font-size: 50px;
     font-weight: 500;
+    width: 900px;
     padding: 100px;
 }
 
 
-.page-2-content-img{
+.page-2-content-img {
     float: right;
     padding-right: 100px;
 }
 
-.page-2-content-img2{
+.page-2-content-img2 {
     background: url('img2.jpg');
     background-repeat: no-repeat;
     height: 564px;
@@ -218,15 +220,16 @@ body{
 
 
 
-.page-2-content p{
-    padding-right: 90px;
+.page-2-content p {
     color: gray;
+    width: 500px;
+    padding-right: 200px;
     font-size: 18px;
     font-weight: 400;
     float: right;
 }
 
-.page-2-content button{
+.page-2-content button {
     font-weight: 500;
     color: gray;
     font-size: 16px;
@@ -242,36 +245,40 @@ body{
     border: 1px solid gray;
 }
 
+
 .page-2-content button:hover,
 .page-3content button:hover,
 .workwithus button:hover,
-.last-footer button:hover{
+.last-footer button:hover {
     border: 1px solid var(--thirdcolor);
-    transition:  0.5s;
+    transition: 0.5s;
     background: var(--thirdcolor);
     color: var(--secondarycolor);
 }
 
 /* page-3 */
 
-.page-3{
+.page-3 {
     background: #171717;
 }
 
-.page-3content{
-    padding: 150px;
+.page-3content {
+    padding-top: 150px;
+    padding-left: 150px;
     display: flex;
     align-items: center;
-    justify-content: space-around;
-    gap: 90px;
+    justify-content: center;
+    gap: 50px;
 }
+
+
 
 .page-3content h3,
 .page-4content h3,
 .page-5content h3,
 .page-5 div h3,
 .page-5content div h3,
-.blog h3{
+.blog h3 {
     font-size: 18px;
     font-weight: 400;
 }
@@ -280,7 +287,7 @@ body{
 .page-4content h2,
 .page-5content h2,
 .page-5 div h2,
-.blog h2{
+.blog h2 {
     font-size: 60px;
     line-height: 60px;
     letter-spacing: 3px;
@@ -289,19 +296,19 @@ body{
 .page-3content div p,
 .page-5content p,
 .workflow h6,
-.page-5content h6{
+.page-5content h6 {
     font-size: 20px;
     font-weight: 300;
     color: gray;
 }
 
-.page-3content div p span{
+.page-3content div p span {
     color: rgb(255, 255, 255);
 }
 
 
 
-.page-3content div button{
+.page-3content div button {
     color: gray;
     font-size: 16px;
     font-weight: 500;
@@ -318,45 +325,48 @@ body{
 /* faqq */
 
 
-.hoveranimation{
+.hoveranimation {
     animation: hoveranime forwards 1s;
 }
 
 @keyframes hoveranime {
-   
-    10%{
+
+    10% {
         transform: translate(-590px);
         opacity: 0;
     }
 }
 
-.faq{
+.faq {
     display: flex;
     align-items: center;
     justify-content: center;
-    padding-bottom: 100px;
+    padding: 160px 150px 200px;
+    /* padding-left: 150px;
+    padding-top: 100px;
+    padding-bottom: 100px; */
 }
 
-.box{
+.box {
     height: 50px;
     width: 200px;
     background: var(--thirdcolor);
     transform: rotate(-30deg);
 }
 
-#img-change{
+#img-change {
     transform: rotate(15deg);
-    
+
 }
 
-.writing-section{
+.writing-section {
     display: grid;
-    grid-template-columns: 100px 400px 400px ;
+    grid-template-columns: 100px 400px 400px;
     align-items: center;
     justify-content: center;
 }
 
-.writing-section div{
+.writing-section div {
     width: 400px;
     padding-left: 80px;
 }
@@ -368,7 +378,7 @@ body{
     font-weight: 300;
 }
 
-.writing-section div p{
+.writing-section div p {
     font-size: 16px;
     color: gray;
     font-weight: 300;
@@ -379,19 +389,19 @@ body{
 /* page-4 */
 
 
-.page-4{
+.page-4 {
     background: #121212;
     padding-top: 200px;
 }
 
-.love_counter{
+.counter {
     display: flex;
     align-items: center;
     justify-content: center;
-    gap: 0px;
+    padding-left: 100px;
 }
 
-.love_counter div{
+.counter div {
     border-radius: 50%;
     border: 0.1px solid gray;
     height: 300px;
@@ -402,12 +412,12 @@ body{
     width: 300px;
 }
 
-.love_counter div h1{
+.counter div h1 {
     font-weight: 300;
     font-size: 100px;
 }
 
-.love_counter div h6{
+.counter div h6 {
     font-weight: 300;
     color: gray;
     text-align: center;
@@ -418,34 +428,41 @@ body{
 /* workflow */
 
 
-.page-4content{
+.page-4content {
     padding-top: 300px;
     text-align: center;
+}
+
+.animated {
+    color: #000000c4;
+    position: relative;
+    top: 44px;
+    height: 33px;
 }
 
 
 /* steps */
 
-.workflow{
+.workflow {
     display: flex;
     align-items: center;
     justify-content: center;
     margin-top: 100px;
 }
 
-.workflow div{
+.workflow div {
     text-align: center;
     width: 280px;
     padding-bottom: 120px;
 }
 
-.workflow div h3{
+.workflow div h3 {
     font-size: 18px;
     font-weight: 400;
     padding-bottom: 30px;
 }
 
-.workflow div h1{
+.workflow div h1 {
     font-size: 100px;
     font-weight: 500;
     color: rgba(128, 128, 128, 0.18);
@@ -453,30 +470,31 @@ body{
 }
 
 
-.workflow div span{
+.workflow div span {
     border-radius: 50%;
     color: transparent;
     background: var(--thirdcolor);
 }
 
 @keyframes bounce {
-    50%{
+    50% {
         transform: scale(1);
     }
-    100%{
+
+    100% {
         transform: scale(1.05);
     }
-    
+
 }
 
 
 
-.workflow div h5{
+.workflow div h5 {
     font-size: 25px;
     font-weight: 500;
 }
 
-.workflow div h6{
+.workflow div h6 {
     font-size: 16px;
     font-weight: 400;
     padding-top: 20px;
@@ -487,17 +505,17 @@ body{
 /* page-5 */
 
 
-.page-5{
+.page-5 {
     background: #171717;
     padding-top: 150px;
-    padding-left: 150px;    
+    padding-left: 150px;
 }
 
 
 /* logos */
 
 
-.clients{
+.clients {
     margin-top: 90px;
     display: flex;
     align-items: center;
@@ -505,7 +523,7 @@ body{
     /* border: 1px solid rgba(128, 128, 128, 0.491); */
 }
 
-.clients img{
+.clients img {
     padding: 60px;
 }
 
@@ -514,7 +532,7 @@ body{
 /* testimonials */
 
 
-.page-5content{
+.page-5content {
     padding-top: 150px;
     padding-left: 70px;
     display: flex;
@@ -525,13 +543,23 @@ body{
 
 /* blogg */
 
-.blog{
+.blog {
     padding-top: 150px;
     text-align: center;
 }
 
+.img-hover-zoom--blur img {
+    transition: transform 1s, filter 1s ease-in-out;
+    filter: blur(2px);
+    /* transform: scale(1.2); */
+}
 
-.blogg{
+.img-hover-zoom--blur:hover img {
+    filter: blur(0);
+    transform: scale(0.9);
+}
+
+.blogg {
     padding-top: 50px;
     display: flex;
     align-items: center;
@@ -540,7 +568,7 @@ body{
 }
 
 
-.blogg div h6{
+.blogg div h6 {
     color: gray;
     font-size: 18px;
     padding-top: 10px;
@@ -548,13 +576,13 @@ body{
 }
 
 
-.blogg div p{
+.blogg div p {
     font-size: 26px;
     padding-top: 10px;
     font-weight: 400;
 }
 
-.blogg div hr{
+.blogg div hr {
     margin-top: 20px;
 }
 
@@ -563,7 +591,7 @@ body{
 /* .workflow */
 
 
-.workwithus{
+.workwithus {
     padding-top: 180px;
     text-align: center;
     display: flex;
@@ -573,16 +601,16 @@ body{
 }
 
 
-.workwithus p{
+.workwithus p {
     border-radius: 20px;
     border: 1px solid white;
-    padding:2px 10px;
+    padding: 2px 10px;
     font-size: 18x;
     margin-bottom: 20px;
 }
 
 
-.workwithus button{
+.workwithus button {
     margin-top: 80px;
     margin-bottom: 100px;
     font-weight: 500;
@@ -600,7 +628,7 @@ body{
 /* footer */
 
 
-.footer-img{
+.footer-img {
     background: url('footer.jpg');
     background-repeat: no-repeat;
     background-size: cover;
@@ -610,7 +638,7 @@ body{
     position: absolute;
 }
 
-.footer{
+.footer {
     position: absolute;
     background: #171717;
     margin-top: 120px;
@@ -625,24 +653,24 @@ body{
 }
 
 
-.footer p{
+.footer p {
     color: gray;
     font-size: 16px;
     padding-top: 20px;
     font-weight: 400;
 }
 
-.footer h3{
+.footer h3 {
     font-size: 22px;
     font-weight: 400;
 }
 
-.social-icon i{
+.social-icon i {
     padding-top: 20px;
     padding-left: 10px;
 }
 
-.footer h6{
+.footer h6 {
     font-size: 16px;
     padding-top: 10px;
     font-weight: 300;
@@ -650,7 +678,7 @@ body{
 
 
 
-.cn{
+.cn {
     font-weight: 500;
     color: gray;
     font-size: 16px;
@@ -663,7 +691,7 @@ body{
 }
 
 
-.last-footer{
+.last-footer {
     background: #121212;
     width: 325px;
     height: 545px;
@@ -677,10 +705,308 @@ body{
 
 
 
-input{
+input {
     background: #171717;
     color: white;
     border: none;
     padding: 10px 20px;
     margin-top: 20px;
+}
+
+
+
+
+/* media qureey */
+
+
+/* 1420---- */
+
+
+@media screen and (max-width:1420px) {
+
+    .navbar {
+        display: none;
+    }
+
+    .blogg {
+        flex-wrap: wrap;
+    }
+
+}
+
+
+
+
+/* 1347---- */
+
+
+@media screen and (max-width:1347px) {
+
+
+    .clients {
+        flex-wrap: wrap;
+    }
+
+    .footer {
+        grid-template-columns: 220px 200px 200px 200px;
+    }
+
+}
+
+/* 1316--- */
+
+
+@media screen and (max-width:1316px) {
+    .page-2-content p {
+        width: 350px;
+        padding-left: -100px;
+    }
+
+    .footer {
+        width: 1100px;
+        display: grid;
+        grid-template-columns: 240px 240px 240px 200px;
+        gap: 10px;
+        padding-left: 40px;
+    }
+}
+
+/* 1283--- */
+
+
+
+@media screen and (max-width:1283px) {
+    .page-2-content p {
+        padding-right: 10px;
+    }
+
+    .faq {
+        flex-wrap: wrap;
+    }
+
+    .box {
+        transform: rotate(-30deg) translate(100px);
+    }
+
+    .footer {
+        padding-left: 0px;
+        text-align: start;
+        grid-template-columns: 210px 200px 200px 100px;
+    }
+}
+
+
+
+/* 1192--- */
+
+
+@media screen and (max-width:1190px) {
+    .page-3content {
+        flex-wrap: wrap;
+        padding-left: -10px;
+        width: 800px;
+        text-align: center;
+    }
+
+    .counter,
+    .workflow {
+        flex-wrap: wrap;
+    }
+}
+
+/* 960-- */
+
+
+@media screen and (max-width:1023px) {
+
+    .page-1 div h1 {
+        font-size: 100px;
+    }
+
+    .page-2-content h1 {
+        width: 700px;
+        padding-left: 10px;
+    }
+
+    .page-2-content p {
+        position: absolute;
+        top: 18cm;
+        background: #00000037;
+    }
+
+    .page-2-content button {
+        display: none;
+    }
+
+
+    .page-3content {
+        width: 700px;
+    }
+
+    .writing-section {
+        grid-template-columns: 50px 350px 350px;
+    }
+
+    .writing-section div {
+        padding-left: 0px;
+    }
+
+    .footer-img {
+        height: 26cm;
+    }
+
+    .footer {
+        width: 700px;
+        height: 22cm;
+        padding: 20px;
+        display: flex;
+        flex-wrap: wrap;
+        align-items: center;
+        justify-content: center;
+    }
+
+    .footer div {
+        width: 300px;
+    }
+
+    .last-footer {
+        width: 350px;
+        text-align: center;
+    }
+
+}
+
+
+/* 820-- */
+
+
+@media screen and (max-width:820px) {
+
+    .page-1 {
+        margin-left: 20px;
+    }
+
+    .page-1 div h1 {
+        font-size: 90px;
+    }
+
+    .page-2-content {
+        padding-left: 30px;
+        font-size: 20px;
+    }
+
+    .page-2-content h1,
+    .page-3content h1,
+    .page-4content h2 {
+        font-size: 45px;
+    }
+
+    .page-3content {
+        padding-left: 30px;
+    }
+
+    .writing-section {
+        padding-top: 100px;
+        display: flex;
+        flex-wrap: wrap;
+    }
+
+    .number-hide {
+        display: none;
+    }
+
+    .counter {
+        padding-left: 0px;
+    }
+
+
+    .page-5 {
+        padding-left: 20px;
+    }
+
+    .page-5 div h2 {
+        font-size: 40px;
+    }
+}
+
+/* 610-- */
+
+@media screen and (max-width:610px) {
+    .page-1 div h1 {
+        font-size: 70px;
+        margin-left: 10px;
+    }
+
+    .page-1 div h2,
+    .page-1 div p {
+        margin-left: 10px;
+    }
+
+    .page-1 {
+        margin-left: 0px;
+    }
+
+    .page-2-content p {
+        background: #000000a4;
+        color: rgb(177, 178, 179);
+    }
+
+    .page-2-content-img {
+        display: none;
+    }
+
+    .page-3content {
+        width: 550px;
+    }
+
+    .footer-img {
+        height: 40cm;
+    }
+
+    .footer {
+        width: 450px;
+        height: 35cm;
+        gap: 20px;
+        padding-top: 60px;
+    }
+}
+
+
+
+@media screen and (max-width:610px) {
+    .page-1 div h1 {
+        font-size: 60px;
+    }
+
+    .page-1 div h1 span {
+        font-size: 30px;
+    }
+
+    .page-2-content {
+        padding-left: 0px;
+    }
+
+    .page-2-content h1 {
+        font-size: 30px;
+        width: 500px;
+    }
+
+
+    .page-3content {
+        width: 400px;
+        margin-left: 0px;
+    }
+
+    .page-3content div h2 {
+        font-size: 40px;
+    }
+
+    .page-5 div h2 {
+        font-size: 40px;
+        letter-spacing: 1px;
+    }
+
+    .t3 {
+        display: none;
+    }
 }
